--- a/01_NumPy_Arrays.ipynb
+++ b/01_NumPy_Arrays.ipynb
@@ -86,7 +86,7 @@
         "\n",
         "# Numpy Arrays\n",
         "\n",
-        "NumPy arrays are the main way we will use Numpy .An array is a collection of items stores in contiguous memory locations(The items are of the same data type. Numpy arrays essentially come in two forms: vectors and matrices. Vectors are strictly 1-d arrays and matrices are 2-d (but you should note a matrix can still have only one row or one column).\n",
+        "NumPy arrays are the main way we will use Numpy .An array is a collection of items stored in contiguous memory locations(The items are of the same data type). Numpy arrays essentially come in two forms: vectors and matrices. Vectors are strictly 1-d arrays and matrices are 2-d (but you should note a matrix can still have only one row or one column).\n",
         "\n",
         "Let's begin our introduction by exploring how to create NumPy arrays.\n",
         "\n",
