--- a/01_Matplotlib_Concepts_Lecture.ipynb
+++ b/01_Matplotlib_Concepts_Lecture.ipynb
@@ -76,7 +76,7 @@
         "* High-quality output in many formats\n",
         "* Very customizable in general\n",
         "\n",
-        "Matplotlib allows you to create reproducible figures programmatically. Let's learn how to use it! Before continuing this lecture, try and explore the official Matplotlib web page: http://matplotlib.org/\n",
+        "Matplotlib allows you to create reproducible figures programmatically. Let's learn how to use it! Try and explore the official Matplotlib web page: http://matplotlib.org/\n",
         "\n",
         "## Installation \n",
         "\n",
